k8s/lab/definitions/ingress/deployment-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: hashicorp/http-echo
        args:
        - "-text=Welcome to the Demo App!"
        ports:
        - containerPort: 5678
