k8s/lab/definitions/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    # nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  # - host: hello.local
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-service
              port:
                number: 80
        - path: /demo
          pathType: Prefix
          backend:
            service:
              name: demo-service
              port:
                number: 80
